fix card text alignment

--- a/pages/About/about.css
+++ b/pages/About/about.css
@@ -70,11 +70,11 @@ button:hover {
   text-align: center;
 }
 .intro h1 {
-  font-size: clamp(2.55rem, 3vw, 2.8rem);
+  font-size: clamp(2.2rem, 3vw, 2.8rem);
   margin-block: 1.63rem 0.75rem;
 }
 .intro p {
-  font-size: clamp(1rem, 3vw, 1.125rem);
+  font-size: clamp(0.9rem, 3vw, 1.125rem);
 }
 /**************** ABOUT SECTION ****************/
 .about {
@@ -82,7 +82,6 @@ button:hover {
 }
 .about .col-65 {
   max-width: 33rem;
-  padding-top: 2.5rem;
 }
 .about h2 {
   margin-bottom: 1.2rem;
@@ -124,6 +123,7 @@ button:hover {
   box-shadow: 0 4px 12px rgba(189, 189, 189, 0.8);
   max-width: 20.3rem;
   overflow: hidden;
+  text-align: start;
 }
 .services .content {
   padding: 1.5rem;
@@ -232,7 +232,14 @@ button:hover {
     flex-direction: row;
     justify-content: space-between;
   }
+
   /**************** ABOUT SECTION ****************/
+  .about .col-65 {
+    padding-top: 2.5rem;
+  }
+
+  /**************** SERVICES SECTION ****************/
+
   /**************** WHY SECTION ****************/
   .why {
     margin-bottom: 3rem;
